--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
 body{margin:0;background:#111;color:#fff;font-family:-apple-system}
 header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
-.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
-h2{margin:0 0 8px 0;font-size:18px}
-.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
-button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
-.small{font-size:14px;padding:10px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
-.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
-.item b{display:block;font-size:16px}
-.item .meta{opacity:.7;font-size:13px;margin-top:6px}
-video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
-.hidden{display:none}
-.stateOut{border-color:#a33}
-.statePending{border-color:#aa3}
-.stateIn{border-color:#333}
+.card{border:1px solid #333;border-radius:12px;padding:14px}
+button{width:100%;padding:14px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px}
 </style>
 </head>
 <body>
@@ -29,95 +18,29 @@ video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 <main id="app"></main>
 
 <script>
-/* ===== 設定 ===== */
-const GAS_URL="https://script.google.com/macros/s/AKfycbzQH_wIyl0sfM_FHx1_qiWq5Q4dGzMkYJ4mNEp9vpqzq0dpxPWSSs8Dgc2HBx1jhp0B/exec";
-
-const TOOL_NAME={
-  T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
-  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
-};
-const MEMBERS=["佐藤","山田","高橋"];
-
-/* ===== URL ===== */
-const p=new URLSearchParams(location.search);
-const site=(p.get("site")||"").trim() || "A";
-const tool=(p.get("tool")||"").trim();
-const toolName=TOOL_NAME[tool]||"不明";
-
-/* ===== 共通 ===== */
+const GAS_URL="★★ ここを最新の exec URL に ★★";
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
-let historyOpen = false; // ★ 追加：未定義防止
 
-function toast(a,b="",ms=2200){
+function toast(t){
   const d=document.createElement("div");
   d.className="toast";
-  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
+  d.textContent=t;
   document.body.appendChild(d);
-  setTimeout(()=>d.remove(),ms);
+  setTimeout(()=>d.remove(),2000);
 }
 
-function getUser(){return localStorage.getItem("user")||"";}
-function setUser(n){localStorage.setItem("user",n);}
-
-/* ===== 通信 ===== */
-async function post(action, photoDataUrl){
-  const payload={ datetime:new Date().toISOString(), site, tool, toolName, action, user:getUser() };
-  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
-  const r = await fetch(GAS_URL,{ method:"POST", body:JSON.stringify(payload) });
-  if(!r.ok) throw new Error("http "+r.status);
-  const js = await r.json();
-  if(js.result!=="ok") throw new Error(js.message||"gas error");
-}
-
-async function getStatus(){
-  const r = await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
-  const js = await r.json();
-  if(js.result!=="ok") throw new Error();
-  return js.items||[];
-}
-
-/* ===== history（安全化） ===== */
-async function getHistory(){
-  const r = await fetch(
-    `${GAS_URL}?mode=history&site=${encodeURIComponent(site)}&tool=${encodeURIComponent(tool)}&t=${Date.now()}`
-  );
-  const js = await r.json();
-  if(js.result!=="ok") throw new Error();
-  return js.items || [];
-}
-
-async function toggleHistory(){
-  const box = document.getElementById("hist");
-  if(!box) return;          // ★ DOM無ければ何もしない
-  historyOpen = !historyOpen;
-  if(!historyOpen){
-    box.classList.add("hidden");
-    return;
-  }
-  box.classList.remove("hidden");
-  box.innerHTML = "読み込み中…";
+async function post(){
   try{
-    const items = await getHistory();
-    box.innerHTML = items.length ? items.map(x=>{
-      return `<div>${new Date(x.at).toLocaleString()} / ${x.action} / ${x.user}</div>`;
-    }).join("") : `<div>履歴なし</div>`;
-  }catch{
-    box.innerHTML = `<div>取得失敗</div>`;
+    const r=await fetch(GAS_URL,{method:"POST",body:JSON.stringify({test:1})});
+    toast("POST status:"+r.status);
+  }catch(e){
+    toast("POST例外:"+e);
   }
 }
 
-/* ===== UI最小 ===== */
-function header(){
-  hdr.textContent = `現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}`;
-}
-function render(){
-  header();
-  app.innerHTML = `<div class="card"><button onclick="take()">持ち出し</button></div>`;
-}
-window.take=async()=>{ await post("持ち出し"); toast("OK"); };
-
-render();
+hdr.textContent="ヘッダーOK";
+app.innerHTML=`<div class="card"><button onclick="post()">持ち出し</button></div>`;
 </script>
 </body>
 </html>
