--- a/index.html
+++ b/index.html
@@ -1,46 +1,21 @@
 <!doctype html>
-<html lang="ja">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>器具員数確認</title>
-<style>
-body{margin:0;background:#111;color:#fff;font-family:-apple-system}
-header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
-main{padding:14px;max-width:560px;margin:auto}
-.card{border:1px solid #333;border-radius:12px;padding:14px}
-button{width:100%;padding:14px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px}
-</style>
-</head>
-<body>
-<header id="hdr"></header>
-<main id="app"></main>
+<html>
+<body style="background:#111;color:#fff">
+<h1 id="h">待機中</h1>
+<button onclick="send()">持ち出し</button>
 
 <script>
-const GAS_URL="★★ ここを最新の exec URL に ★★";
-const app=document.getElementById("app");
-const hdr=document.getElementById("hdr");
+const GAS_URL="ここに exec URL";
 
-function toast(t){
-  const d=document.createElement("div");
-  d.className="toast";
-  d.textContent=t;
-  document.body.appendChild(d);
-  setTimeout(()=>d.remove(),2000);
-}
-
-async function post(){
+async function send(){
   try{
-    const r=await fetch(GAS_URL,{method:"POST",body:JSON.stringify({test:1})});
-    toast("POST status:"+r.status);
+    const r = await fetch(GAS_URL,{method:"POST", body:"x"});
+    const t = await r.text();
+    document.getElementById("h").textContent = "返答："+t;
   }catch(e){
-    toast("POST例外:"+e);
+    document.getElementById("h").textContent = "例外："+e;
   }
 }
-
-hdr.textContent="ヘッダーOK";
-app.innerHTML=`<div class="card"><button onclick="post()">持ち出し</button></div>`;
 </script>
 </body>
 </html>
