--- a/index.html
+++ b/index.html
@@ -1,173 +1,226 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>tool-check</title>
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>器具員数確認</title>
 <style>
-body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#000;
-  color:#fff;
-}
-#hdr{
-  padding:14px;
-  border-bottom:1px solid #333;
-  font-size:14px;
-}
-.sec{
-  padding:14px;
-}
-.btn{
-  width:100%;
-  padding:14px;
-  margin:8px 0;
-  font-size:16px;
-  background:#111;
-  color:#fff;
-  border:1px solid #333;
-  border-radius:10px;
-}
-.list{
-  border:1px solid #333;
-  border-radius:10px;
-  padding:12px;
-  margin:10px 0;
-}
-.small{
-  font-size:13px;
-  color:#aaa;
-}
+body{margin:0;background:#111;color:#fff;font-family:-apple-system}
+header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
+main{padding:14px;max-width:560px;margin:auto}
+.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
+h2{margin:0 0 8px 0;font-size:18px}
+button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.small{font-size:14px;padding:10px}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
+.item b{display:block;font-size:16px}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
+.hidden{display:none}
+.statePending{border-color:#aa3}
+.stateOut{border-color:#a33}
 </style>
 </head>
-
 <body>
-<div id="hdr"></div>
-<div id="app"></div>
+<header id="hdr"></header>
+<main id="app"></main>
+<iframe name="hidden" style="display:none"></iframe>
 
 <script>
 /* ===== 設定 ===== */
-const GAS_URL = "https://script.google.com/macros/s/AKfycbzgupJn0DPxP6AY-Ocr-Nw3Pt9cSbpRIr3ZMZxYH3R1z9-ydLUhepZwU51WRQB5bLG_Lw/exec";
+const GAS_URL="https://script.google.com/macros/s/AKfycbzgupJn0DPxP6AY-Ocr-Nw3Pt9cSbpRIr3ZMZxYH3R1z9-ydLUhepZwU51WRQB5bLG_Lw/exec";
 
-const TOOL_NAME = {
-  T001:"手歯止め",
-  T002:"デジタルゲージ",
-  T003:"検測用具",
-  T004:"誘導棒"
+const TOOL_NAME={
+  T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
+  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
 };
 
 /* ===== URL ===== */
-const p = new URLSearchParams(location.search);
-const site = p.get("site") || "千葉機械ライン";
-const tool = p.get("tool");            // ← 無い場合は「確認者画面」
-let user  = localStorage.getItem("toolcheck_user") || "";
+const p=new URLSearchParams(location.search);
+const site=(p.get("site")||"").trim() || "A";
+const tool=(p.get("tool")||"").trim();
+const toolName=TOOL_NAME[tool]||"不明";
+const IS_CHECKER = (p.get("role")||"") === "checker";
 
-/* ===== 共通 ===== */
-const hdr = document.getElementById("hdr");
-const app = document.getElementById("app");
-
-hdr.textContent = `現場：${site}　端末：${user || "未入力"}`;
-
-/* ===== API ===== */
-async function getStatus(){
-  const r = await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`);
-  return r.json();
+/* ===== 名前 ===== */
+const LS_KEY = IS_CHECKER ? "toolcheck_checker" : "toolcheck_user";
+let CURRENT_USER = localStorage.getItem(LS_KEY);
+if(!CURRENT_USER){
+  const v = prompt("名前を入力してください");
+  CURRENT_USER = (v && v.trim()) ? v.trim() : "未入力";
+  localStorage.setItem(LS_KEY, CURRENT_USER);
 }
-async function post(action, item){
-  await fetch(GAS_URL,{
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({
-      site,
-      tool:item.tool,
-      toolName:item.toolName,
-      action,
-      user,
-      datetime:new Date().toISOString()
-    })
+
+/* ===== DOM ===== */
+const app=document.getElementById("app");
+const hdr=document.getElementById("hdr");
+
+/* ===== util ===== */
+function toast(a,b="",ms=2000){
+  const d=document.createElement("div");
+  d.className="toast";
+  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
+  document.body.appendChild(d);
+  setTimeout(()=>d.remove(),ms);
+}
+
+/* ===== JSONP ===== */
+function jsonp_(url, timeoutMs=8000){
+  return new Promise((resolve,reject)=>{
+    const cb="cb_"+Math.random().toString(36).slice(2);
+    let done=false;
+    const timer=setTimeout(()=>{
+      if(done) return;
+      done=true;
+      try{ delete window[cb]; }catch(_){}
+      s.remove();
+      reject(new Error("timeout"));
+    }, timeoutMs);
+
+    window[cb]=(d)=>{
+      if(done) return;
+      done=true;
+      clearTimeout(timer);
+      try{ delete window[cb]; }catch(_){}
+      s.remove();
+      resolve(d);
+    };
+
+    const s=document.createElement("script");
+    s.onerror=()=>{
+      if(done) return;
+      done=true;
+      clearTimeout(timer);
+      try{ delete window[cb]; }catch(_){}
+      s.remove();
+      reject(new Error("onerror"));
+    };
+
+    s.src=url+(url.includes("?")?"&":"?")+"callback="+cb+"&t="+Date.now();
+    document.body.appendChild(s);
   });
 }
 
-/* ======================================================
-   ① タグ読んだ画面（既存動作・触ってない）
-====================================================== */
-if(tool){
-  renderBorrow();
-}else{
-/* ======================================================
-   ② 確認者画面（ここだけ修正）
-====================================================== */
-  renderApprover();
+async function getStatus(){
+  const js = await jsonp_(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`);
+  if(!js || js.result!=="ok") throw new Error("bad result");
+  return js.items||[];
 }
 
-/* ===== 借りる画面 ===== */
-async function renderBorrow(){
-  const data = await getStatus();
-  const item = data.items.find(i=>i.tool===tool) || {
-    tool, toolName:TOOL_NAME[tool]||"不明", status:"IN"
-  };
+/* ===== POST（共通）===== */
+function postAction(payload){
+  const f=document.createElement("form");
+  f.method="POST"; f.action=GAS_URL; f.target="hidden";
+  f.style.display="none";
+  for(const k in payload){
+    const i=document.createElement("input");
+    i.name=k; i.value=payload[k];
+    f.appendChild(i);
+  }
+  document.body.appendChild(f);
+  f.submit();
+  f.remove();
+}
 
-  app.innerHTML = `
-    <div class="sec">
-      <div class="list">
-        状態：${ item.status==="OUT" ? "持ち出し中" : "持ち出しなし" }
-      </div>
-      <button class="btn" onclick="doBorrow()">持ち出し</button>
+/* ===== header ===== */
+hdr.textContent = IS_CHECKER
+  ? `確認者画面｜現場：${site}　確認者：${CURRENT_USER}`
+  : `現場：${site}　道具：${toolName}　端末：${CURRENT_USER}`;
+
+/* ===== UI ===== */
+function renderNormal(items){
+  // ※タグ読んだ側は「触らない」方針なので、ここは最低限表示だけにしてある
+  app.innerHTML = `<div class="card"><h2>通常画面</h2><div style="opacity:.7">（この画面は既存のタグ読取版を使用）</div></div>`;
+}
+
+function statusLabel(items){
+  const out = items.some(x=>x.status==="OUT");
+  const pend = items.some(x=>x.status==="PENDING");
+  if(out) return "持ち出し中";
+  if(pend) return "返却確認待ちあり";
+  return "持ち出しなし";
+}
+
+function renderChecker(items){
+  const pend = items.filter(x=>x.status==="PENDING");
+  const out  = items.filter(x=>x.status==="OUT");
+
+  // 上段：状態
+  const label = statusLabel(items);
+
+  let topHtml = `
+    <div class="card">
+      <h2>状態</h2>
+      <div style="font-size:22px;font-weight:700;margin-top:6px">${label}</div>
     </div>
   `;
-}
 
-async function doBorrow(){
-  if(!user){
-    user = prompt("名前を入力");
-    if(!user) return;
-    localStorage.setItem("toolcheck_user",user);
-    hdr.textContent = `現場：${site}　端末：${user}`;
-  }
-  await post("持ち出し",{ tool, toolName:TOOL_NAME[tool] });
-  location.reload();
-}
-
-/* ===== 確認者画面 ===== */
-async function renderApprover(){
-  const data = await getStatus();
-  const pending = data.items.filter(i=>i.status==="PENDING");
-
-  let html = `
-    <div class="sec">
-      <div class="list">
-        状態：${ pending.length ? "返却確認待ち" : "持ち出しなし" }
+  // 返却確認待ち（PENDING）があるときだけ「写真を見る」「確認」を出す
+  let pendHtml = "";
+  if(pend.length>0){
+    pendHtml = `
+      <div class="card">
+        <h2>返却確認</h2>
+        ${pend.map(x=>`
+          <div class="item statePending">
+            <b>${x.toolName}（${x.tool}）</b>
+            <div class="meta">${x.by} / ${new Date(x.at).toLocaleString()}</div>
+            <button class="small" onclick="openPhoto('${escapeAttr(x.photoUrl)}')">写真を見る</button>
+            <button onclick="confirmChecker('${escapeAttr(x.tool)}','${escapeAttr(x.toolName)}')">確認（承認）</button>
+          </div>
+        `).join("")}
       </div>
-  `;
-
-  if(pending.length){
-    pending.forEach(i=>{
-      html += `
-        <div class="list">
-          <b>${i.toolName} (${i.tool})</b><br>
-          <span class="small">${i.by} / ${new Date(i.at).toLocaleString()}</span>
-          <button class="btn" onclick="approve('${i.tool}','${i.toolName}')">確認</button>
-        </div>
-      `;
-    });
+    `;
   }
 
-  html += "</div>";
-  app.innerHTML = html;
+  // ※真ん中の「不明」ブロックは確認者では出さない（要件）
+  app.innerHTML = topHtml + pendHtml;
+
+  // OUTがあっても確認者は承認対象じゃない（返却(PENDING)だけ）
+  // ここは表示だけ上段で伝える
 }
 
-async function approve(tid,tname){
-  if(!user){
-    user = prompt("名前を入力");
-    if(!user) return;
-    localStorage.setItem("toolcheck_user",user);
-    hdr.textContent = `現場：${site}　端末：${user}`;
-  }
-  await post("確認",{ tool:tid, toolName:tname });
-  location.reload();
+function escapeAttr(s){
+  return String(s||"")
+    .replaceAll("&","&amp;")
+    .replaceAll("'","&#39;")
+    .replaceAll('"',"&quot;")
+    .replaceAll("<","&lt;")
+    .replaceAll(">","&gt;");
 }
+
+/* ===== 確認者用：確認（承認）===== */
+function confirmChecker(tid, tname){
+  postAction({
+    datetime:new Date().toISOString(),
+    site,
+    tool: tid,
+    toolName: tname,
+    action:"確認",
+    user: CURRENT_USER
+  });
+  toast("確認（承認）を記録");
+  // すぐ取り直し（GAS反映に少しラグるので短い待ち）
+  setTimeout(refresh, 600);
+}
+
+function openPhoto(u){
+  if(!u){ toast("写真URLなし"); return; }
+  window.open(u, "_blank");
+}
+
+async function refresh(){
+  try{
+    app.innerHTML = `<div class="card"><b>取得中…</b></div>`;
+    const items = await getStatus();
+    IS_CHECKER ? renderChecker(items) : renderNormal(items);
+  }catch(e){
+    app.innerHTML = `<div class="card"><b>取得失敗</b></div>`;
+    toast("取得失敗");
+  }
+}
+
+refresh();
 </script>
 </body>
 </html>
